crates/ruff/tests/cli/snapshots/cli__lint__output_format_grouped.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - grouped
    - "--select"
    - "F401,F821"
    - "--target-version"
    - py39
    - input.py
---
success: false
exit_code: 1
----- stdout -----
input.py:
  1:8 F401 [*] `os` imported but unused
  2:5 F821 Undefined name `y`
  3:1 invalid-syntax: Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)

Found 3 errors.
[*] 1 fixable with `--fix`.

----- stderr -----
